--- a/.github/workflows/3-customize-your-homepage.yml
+++ b/.github/workflows/3-customize-your-homepage.yml
@@ -1,8 +1,8 @@
-name: Step 4, TBD
+name: Step 3, Customize your homepage
 
 # This step triggers after TBD
-# This step sets STEP to 5
-# This step closes <details id=4> and opens <details id=5>
+# This step sets STEP to 4
+# This step closes <details id=3> and opens <details id=4>
 
 # This will run every time we TBD
 # Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
@@ -21,7 +21,7 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently 4 (see update-step.sh)
+    # 2. The STEP is currently 3 (see update-step.sh)
     # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
     if: ${{ github.repository_owner != 'githublearn' }}
@@ -38,13 +38,13 @@ jobs:
 
       # TBD include any further steps here
 
-      # Update README to close <details id=4>
-      # and open <details id=5>
-      # and set STEP to '5'
-      - name: Update to step 5
+      # Update README to close <details id=3>
+      # and open <details id=4>
+      # and set STEP to '4'
+      - name: Update to step 4
         run: ./.github/script/update-step.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FROM_STEP: 4
-          TO_STEP: 5
+          FROM_STEP: 3
+          TO_STEP: 4
           BRANCH_NAME: TBD
