--- a/.github/workflows/4-create-a-blog-post.yml
+++ b/.github/workflows/4-create-a-blog-post.yml
@@ -1,8 +1,8 @@
-name: Step 1, TBD
+name: Step 4, Create a blog post
 
 # This step triggers after TBD
-# This step sets STEP to 2
-# This step closes <details id=1> and opens <details id=2>
+# This step sets STEP to 5
+# This step closes <details id=4> and opens <details id=5>
 
 # This will run every time we TBD
 # Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
@@ -21,7 +21,7 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently 1 (see update-step.sh)
+    # 2. The STEP is currently 4 (see update-step.sh)
     # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
     if: ${{ github.repository_owner != 'githublearn' }}
@@ -38,13 +38,13 @@ jobs:
 
       # TBD include any further steps here
 
-      # Update README to close <details id=1>
-      # and open <details id=2>
-      # and set STEP to '2'
-      - name: Update to step 2
+      # Update README to close <details id=4>
+      # and open <details id=5>
+      # and set STEP to '5'
+      - name: Update to step 5
         run: ./.github/script/update-step.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FROM_STEP: 1
-          TO_STEP: 2
+          FROM_STEP: 4
+          TO_STEP: 5
           BRANCH_NAME: TBD
