--- a/.github/workflows/0-start.yml
+++ b/.github/workflows/0-start.yml
@@ -39,6 +39,9 @@ jobs:
           fetch-depth: 0 # Let's get all the branches
 
       # TBD Include any additional set up steps here
+      # TBD set up `my-pages` branch
+      # TBD add `_config.yml` blank file
+      # TBD add `index.md` file with title: frontmatter
 
       # Update README to close <details id=0>
       # and open <details id=1>
