--- a/.github/workflows/0-start.yml
+++ b/.github/workflows/0-start.yml
@@ -52,4 +52,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FROM_STEP: 0
           TO_STEP: 1
-          BRANCH_NAME: my-first-branch
+          BRANCH_NAME: TBD
