--- a/.github/workflows/2-configure-your-site.yml
+++ b/.github/workflows/2-configure-your-site.yml
@@ -1,14 +1,18 @@
 name: Step 2, Configure your site
 
-# This step triggers after TBD
+# This step triggers after the learner update their Pages config file
 # This step sets STEP to 3
 # This step closes <details id=2> and opens <details id=3>
 
-# This will run every time we TBD
+# This will run every time we update `_config.yml` in the `my-pages` branch 
 # Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  TBD:
+  push:
+    branches:
+      - my-pages
+    paths:
+      - _config.yml
 
 permissions:
   # Need `contents: read` to checkout the repository
@@ -16,8 +20,8 @@ permissions:
   contents: write
 
 jobs:
-  on_TBD:
-    name: On TBD
+  on_config_update:
+    name: On config update 
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
@@ -35,8 +39,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Let's get all the branches
-
-      # TBD include any further steps here
+          ref: my-pages
 
       # Update README to close <details id=2>
       # and open <details id=3>
@@ -47,4 +50,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FROM_STEP: 2
           TO_STEP: 3
-          BRANCH_NAME: TBD
+          BRANCH_NAME: my-pages 
