--- a/.github/workflows/0-start.yml
+++ b/.github/workflows/0-start.yml
@@ -25,7 +25,6 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently '0' (see update-step.sh)
     # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
     if: ${{ github.repository_owner != 'githublearn' }}
@@ -76,9 +75,10 @@ jobs:
       # and open <details id=1>
       # and set STEP to '1'
       - name: Update to step 1
-        run: ./.github/script/update-step.sh
+        uses: githublearn/action-update-step@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
           FROM_STEP: 0
           TO_STEP: 1
           BRANCH_NAME: my-pages 
