--- a/.github/workflows/1-enable-github-pages.yml
+++ b/.github/workflows/1-enable-github-pages.yml
@@ -10,6 +10,7 @@ on:
   workflow_dispatch:
   page_build:
 
+# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
   # Need `contents: read` to checkout the repository
   # Need `contents: write` to update the step metadata
@@ -23,7 +24,7 @@ jobs:
     # 1. This repository isn't the template repository
     # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: ${{ github.repository_owner != 'githublearn' }}
+    if: ${{ !github.event.repository.is_template }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows
     runs-on: ubuntu-latest
@@ -36,14 +37,12 @@ jobs:
           fetch-depth: 0 # Let's get all the branches
           ref: my-pages
 
-      # Update README to close <details id=1>
-      # and open <details id=2>
+      # Update README to close <details id=1> and open <details id=2>
       # and set STEP to '2'
       - name: Update to step 2
-        uses: githublearn/action-update-step@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
-          FROM_STEP: 1
-          TO_STEP: 2
-          BRANCH_NAME: my-pages 
+        uses: githublearn/action-update-step@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          from_step: 1
+          to_step: 2
+          branch_name: my-pages
