--- a/.github/workflows/2-configure-your-site.yml
+++ b/.github/workflows/2-configure-your-site.yml
@@ -23,6 +23,7 @@ permissions:
 jobs:
   on_config_update:
     name: On config update 
+    needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
