--- a/.github/workflows/3-customize-your-homepage.yml
+++ b/.github/workflows/3-customize-your-homepage.yml
@@ -23,6 +23,7 @@ permissions:
 jobs:
   on_homepage_update:
     name: On homepage update 
+    needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
