--- a/.github/workflows/4-create-a-blog-post.yml
+++ b/.github/workflows/4-create-a-blog-post.yml
@@ -23,6 +23,7 @@ permissions:
 jobs:
   on_create_blog_post:
     name: On create blog post 
+    needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
