--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -1,18 +1,17 @@
-name: Step 0, Start
+name: Step 0, Welcome
 
 # This step triggers after the learner creates a new repository from the template
-# This step sets STEP to 1
-# This step closes <details id=0> and opens <details id=1>
+# This workflow updates from step 0 to step 1.
 
 # This will run every time we create push a commit to `main`
-# Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   push:
     branches:
       - main
 
-# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
+# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
   # Need `contents: read` to checkout the repository
   # Need `contents: write` to update the step metadata
@@ -21,7 +20,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  # Get the current step from .github/script/STEP so we can
+  # Get the current step from .github/steps/-step.txt so we can
   # limit running the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
@@ -31,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/script/STEP)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
@@ -41,9 +40,9 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently 0
-    # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
+    # 2. The step is currently 0
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 0 }}
@@ -61,7 +60,7 @@ jobs:
       - name: Create my-pages branch, initial Pages files, and pull request
         run: |
           echo "Make sure we are on step 0"
-          if [ "$(cat .github/script/STEP)" != 0 ]
+          if [ "$(cat .github/steps/-step.txt)" != 0 ]
           then
             echo "Current step is not 0"
             exit 0
@@ -86,10 +85,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Update README to close <details id=0> and open <details id=1>
-      # and set STEP to '1'
-      - name: Update to step 1
-        uses: skills/action-update-step@v1
+      # In README.md, switch step 0 for step 1.
+            - name: Update to step 1
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 0
