--- a/.github/workflows/1-enable-github-pages.yml
+++ b/.github/workflows/1-enable-github-pages.yml
@@ -1,23 +1,22 @@
 name: Step 1, Enable GitHub Pages
 
 # This step triggers after we run a pages build
-# This step sets STEP to 2
-# This step closes <details id=1> and opens <details id=2>
+# This workflow updates from step 1 to step 2.
 
 # This will run every time we run a pages build
-# Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   page_build:
 
-# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
+# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
   # Need `contents: read` to checkout the repository
   # Need `contents: write` to update the step metadata
   contents: write
 
 jobs:
-  # Get the current step from .github/script/STEP so we can
+  # Get the current step from .github/steps/-step.txt so we can
   # limit running the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
@@ -27,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/script/STEP)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
@@ -37,9 +36,9 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently 1
-    # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
+    # 2. The step is currently 1
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 1 }}
@@ -55,10 +54,9 @@ jobs:
           fetch-depth: 0 # Let's get all the branches
           ref: my-pages
 
-      # Update README to close <details id=1> and open <details id=2>
-      # and set STEP to '2'
-      - name: Update to step 2
-        uses: skills/action-update-step@v1
+      # In README.md, switch step 1 for step 2.
+            - name: Update to step 2
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 1
