--- a/.github/workflows/2-configure-your-site.yml
+++ b/.github/workflows/2-configure-your-site.yml
@@ -1,11 +1,10 @@
 name: Step 2, Configure your site
 
 # This step triggers after the learner update their Pages config file
-# This step sets STEP to 3
-# This step closes <details id=2> and opens <details id=3>
+# This workflow updates from step 2 to step 3.
 
 # This will run every time we update `_config.yml` in the `my-pages` branch 
-# Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   push:
@@ -14,14 +13,14 @@ on:
     paths:
       - _config.yml
 
-# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
+# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
   # Need `contents: read` to checkout the repository
   # Need `contents: write` to update the step metadata
   contents: write
 
 jobs:
-  # Get the current step from .github/script/STEP so we can
+  # Get the current step from .github/steps/-step.txt so we can
   # limit running the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
@@ -31,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/script/STEP)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
@@ -41,9 +40,9 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository
-    # 2. The STEP is currently 2
-    # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
+    # 2. The step is currently 2
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 2 }}
@@ -59,10 +58,9 @@ jobs:
           fetch-depth: 0 # Let's get all the branches
           ref: my-pages
 
-      # Update README to close <details id=2> and open <details id=3>
-      # and set STEP to '3'
-      - name: Update to step 3
-        uses: skills/action-update-step@v1
+      # In README.md, switch step 2 for step 3.
+            - name: Update to step 3
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 2
