--- a/.github/workflows/1-enable-github-pages.yml
+++ b/.github/workflows/1-enable-github-pages.yml
@@ -16,8 +16,7 @@ permissions:
   contents: write
 
 jobs:
-  # Get the current step from .github/steps/-step.txt so we can
-  # limit running the main job when the learner is on the same step.
+  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -55,7 +54,7 @@ jobs:
           ref: my-pages
 
       # In README.md, switch step 1 for step 2.
-            - name: Update to step 2
+      - name: Update to step 2
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
