--- a/.github/workflows/3-customize-your-homepage.yml
+++ b/.github/workflows/3-customize-your-homepage.yml
@@ -20,8 +20,7 @@ permissions:
   contents: write
 
 jobs:
-  # Get the current step from .github/steps/-step.txt so we can
-  # limit running the main job when the learner is on the same step.
+  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -59,7 +58,7 @@ jobs:
           ref: my-pages
 
       # In README.md, switch step 3 for step 4.
-            - name: Update to step 4
+      - name: Update to step 4
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
