--- a/.github/workflows/4-create-a-blog-post.yml
+++ b/.github/workflows/4-create-a-blog-post.yml
@@ -1,11 +1,10 @@
 name: Step 4, Create a blog post
 
-# This step triggers after the learner creates a blog post 
-# This step sets STEP to 5
-# This step closes <details id=4> and opens <details id=5>
+# This step triggers after the learner creates a blog post.
+# This workflow updates from step 4 to step 5.
 
-# This will run every time we update a .md file in `_posts/` in the `my-pages` branch
-# Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+# This will run every time we update a .md file in `_posts/` in the `my-pages` branch.
+# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   push:
@@ -14,15 +13,14 @@ on:
     paths:
       - _posts/*.md
 
-# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
+# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository
-  # Need `contents: write` to update the step metadata
+  # Need `contents: read` to checkout the repository.
+  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
-  # Get the current step from .github/script/STEP so we can
-  # limit running the main job when the learner is on the same step.
+  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -31,38 +29,37 @@ jobs:
         uses: actions/checkout@v3
       - id: get_step
         run: |
-          echo "current_step=$(cat ./.github/script/STEP)" >> $GITHUB_OUTPUT
+          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
   on_create_blog_post:
-    name: On create blog post 
+    name: On create blog post
     needs: get_current_step
 
     # We will only run this action when:
-    # 1. This repository isn't the template repository
-    # 2. The STEP is currently 4
-    # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
+    # 1. This repository isn't the template repository.
+    # 2. The step is currently 4.
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
+    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 4 }}
 
-    # We'll run Ubuntu for performance instead of Mac or Windows
+    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit the README
+      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Let's get all the branches
+          fetch-depth: 0 # Let's get all the branches.
           ref: my-pages
 
-      # Update README to close <details id=4> and open <details id=5>
-      # and set STEP to '5'
+      # In README.md, switch step 4 for step 5.
       - name: Update to step 5
-        uses: skills/action-update-step@v1
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 4
