--- a/.github/workflows/5-merge-your-pull-request.yml
+++ b/.github/workflows/5-merge-your-pull-request.yml
@@ -37,12 +37,12 @@ jobs:
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 5.
+    # 2. The step is currently 52 (Step 5 with 2).
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 5 }}
+          && needs.get_current_step.outputs.current_step == 52 }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
@@ -54,11 +54,11 @@ jobs:
         with:
           fetch-depth: 0 # Let's get all the branches.
 
-      # In README.md, switch step 5 for step X.
+      # In README.md, switch step 52 for step X.
       - name: Update to step X
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 5
+          from_step: 52
           to_step: X
           branch_name: my-pages
