--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,1 @@
-version: 2
-updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "monthly"
+disabled
