--- a/.github/workflows/2-step.yml
+++ b/.github/workflows/2-step.yml
@@ -1,6 +1,5 @@
 name: Step 2
 
-
 on:
   workflow_dispatch:
   # Common event triggers: pull_request, push, issues, issue_comment (feel free to experiment)
@@ -19,46 +18,16 @@ permissions:
 
 env:
   REVIEW_FILE: ".github/steps/x-review.md"
+  STEP_3_FILE: ".github/steps/3-step.md"
 
 jobs:
   find_exercise:
     name: Find Exercise Issue
     uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@v0.4.0
 
-  check_step_work:
-    name: Check step work
-    runs-on: ubuntu-latest
-    needs: [find_exercise]
-    env:
-      ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Get response templates
-        uses: actions/checkout@v4
-        with:
-          repository: skills/exercise-toolkit
-          path: exercise-toolkit
-          ref: v0.4.0
-
-      # START: Check practical exercise
-
-      # (replace-me: Add verification steps here if needed)
-
-      # END: Check practical exercise
-
-      - name: Create comment - step finished - final review next
-        run: |
-          gh issue comment "$ISSUE_URL" \
-            --body-file exercise-toolkit/markdown-templates/step-feedback/lesson-review.md
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   post_review_content:
     name: Post review content
-    needs: [find_exercise, check_step_work]
+    needs: [find_exercise]
     runs-on: ubuntu-latest
     env:
       ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
@@ -70,7 +39,7 @@ jobs:
       - name: Create comment - add step content
         run: |
           gh issue comment "$ISSUE_URL" \
-            --body-file "$REVIEW_FILE"
+            --body-file "$STEP_3_FILE"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
