--- a/.github/workflows/0-start-exercise.yml
+++ b/.github/workflows/0-start-exercise.yml
@@ -67,6 +67,6 @@ jobs:
 
       - name: Enable next step workflow
         run: |
-          gh workflow disable "${{github.workflow}}"
+          gh workflow enable "Step 1"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
