feat: update steps for GitHub Pages setup and remove unused workflow files

--- a/.github/workflows/2-step.yml
+++ b/.github/workflows/2-step.yml
@@ -1,15 +1,11 @@
 name: Step 2
 
 on:
-  workflow_dispatch:
-  # Common event triggers: pull_request, push, issues, issue_comment (feel free to experiment)
-  # Docs: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
-  # Example:
-  # pull_request:
-  #   branches:
-  #     - main
-  #   types:
-  #     - closed
+  push:
+    branches:
+      - main
+    paths:
+      - index.md
 
 permissions:
   contents: read
