--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -1,7 +1,11 @@
 name: Step 3
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - _config.yml
 
 permissions:
   contents: read
