--- a/.github/workflows/0-start-exercise.yml
+++ b/.github/workflows/0-start-exercise.yml
@@ -23,6 +23,38 @@ jobs:
       exercise-title: "GitHub Pages"
       intro-message: "Create a site or blog from your GitHub repositories with GitHub Pages."
 
+  create_initial_files:
+    name: Create initial files
+    runs-on: ubuntu-latest
+    needs: [start_exercise]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Create empty _config.yml file
+        run: |
+          touch _config.yml
+
+      - name: Create index.md file
+        run: |
+          cat > index.md << EOF
+          ---
+          title: Welcome to my blog!
+          ---
+          EOF
+
+      - name: Commit files
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: |
+            - _config.yml
+            - index.md
+          message: 'Create config and homepages files'
+          default_author: github_actions
+
   post_next_step_content:
     name: Post next step content
     runs-on: ubuntu-latest
