--- a/.github/workflows/2-step.yml
+++ b/.github/workflows/2-step.yml
@@ -39,12 +39,21 @@ jobs:
           path: exercise-toolkit
           ref: v0.4.0
 
+      - name: Build comment - add step content
+        id: build-comment
+        uses: skills/action-text-variables@v2
+        with:
+          template-file: ${{ env.STEP_3_FILE }}
+          template-vars: |
+            login: ${{ github.actor }}
+
       - name: Create comment - add step content
         run: |
           gh issue comment "$ISSUE_URL" \
-            --body-file "$STEP_3_FILE"
+            --body "$ISSUE_BODY"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_BODY: ${{ steps.build-comment.outputs.updated-text }}
 
       - name: Create comment - watching for progress
         run: |
