--- a/.github/workflows/4-step.yml
+++ b/.github/workflows/4-step.yml
@@ -22,7 +22,7 @@ jobs:
 
   post_review_content:
     name: Post review content
-    needs: [find_exercise, check_step_work]
+    needs: [find_exercise]
     runs-on: ubuntu-latest
     env:
       ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
