Add step finished messages

--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -35,6 +35,22 @@ jobs:
           path: exercise-toolkit
           ref: v0.4.0
 
+      - name: Build message - step finished
+        id: build-message-step-finish
+        uses: skills/action-text-variables@v2
+        with:
+          template-file: exercise-toolkit/markdown-templates/step-feedback/step-finished-prepare-next-step.md
+          template-vars: |
+            next_step_number: 2
+
+      - name: Create comment - step finished
+        run: |
+          gh issue comment "$ISSUE_URL" \
+            --body "$ISSUE_BODY"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_BODY: ${{ steps.build-message-step-finish.outputs.updated-text }}
+
       - name: Build comment - add step content
         id: build-comment
         uses: skills/action-text-variables@v2
